--- a/Readme
+++ b/Readme
@@ -8,7 +8,7 @@ By this way, you avoid the verbose manipulation to divide big size Marc file int
 
 Appendix
 How do you get the 001 field list for imported records.
-1. Before importing, using MarcEdit software to open your Marc file (.mrk) and copy 001 field to 035 field.
+1. Before importing, using MarcEdit software to open your Marc file (.mrk) and copy 001 field to 035 field. (Key step). 
 2. After running import profile, click Resources > Monitor and View Imports.
 3. Select "report" menu from the job (click 3 dots button) and open the report
 4. For “Total records imported", Select "Create itemized title set" by clicking 3 dots button.
@@ -16,7 +16,7 @@ How do you get the 001 field list for imported records.
 6. Click Admin > Manage sets.
 7. Find the set you created and select "Members" by clicking 3 dots button.
 8. Click "Export List" button, export to excel file.
-9. In the Excel file, there is a field named "Record number". Copy all records number into a text file, and this is your 001 field list file for imported records.
+9. In the Excel file, there is a field named "Record number". Copy all records number into a text file, and this is your 001 field list file for imported records. Attention “Record number” column in Excel file contains the content of first 035 field from imported records. 
 
 The demo is located in http://librarysysworld.com:8080/marc_records_delete_java, and you could use your 001 field list file and Marc file(.mrk) to make a test.
 
