--- a/Readme
+++ b/Readme
@@ -1,24 +1,32 @@
-ALMA has some limit on the number of records downloaded from “imports report”, which are 1000 records. If you have more than 1000 records marked as "Total record not imported/deleted", you can only download first 1000 records. This brought huge inconvenience during batch uploading.
+Delete Marc records from Marc file by using 035 field list file
 
-In order to get/receive all records (more than 1000) which are not imported, you need to keep the original Marc file (.mrk) before importing. After importing, you need to generate 035 field list file of imported records by using Alma “imports report”. Then, you use this java code to exclude imported records from original Marc file, and get all of Marc records of "not imported".
+ALMA has some limit on the number of records downloaded from “imports report”, which are 1000 records. If you have more than 1000 records marked as “Total record not imported/deleted”, you can only download first 1000 records. This brought huge inconvenience during batch uploading.
 
-Later, you can use other ALMA import profile to process this Marc file containing all "not imported" records.
+In order to get/receive all records (more than 1000) which are not imported, you need to keep the original Marc file (.mrk) before importing. After importing, you need to generate 035 field list file of imported records by using Alma “imports report”. Then, you use this java code to exclude imported records from original Marc file, and get all of Marc records of “not imported”.
+
+Later, you can use other ALMA import profile to process this Marc file containing all “not imported” records.
 
 By this way, you avoid the verbose manipulation to divide big size Marc file into small ones which you imported one by one, saving you a lot of time.
 
 Appendix
 How do you get the 035 field list for imported records.
-1. Before importing, using MarcEdit software to open your Marc file (.mrk) and copy 001 field to 035 field. (Key step). 
+1. Before importing, using MarcEdit software to open your Marc file (.mrk) and copy 001 field to 035 field. (Key step).
 2. After running import profile, click Resources > Monitor and View Imports.
-3. Select "report" menu from the job (click 3 dots button) and open the report
-4. For “Total records imported", Select "Create itemized title set" by clicking 3 dots button.
+3. Select “report” menu from the job (click 3 dots button) and open the report
+4. For “Total records imported”, Select “Create itemized title set” by clicking 3 dots button.
 5. Give the set name and save.
 6. Click Admin > Manage sets.
-7. Find the set you created and select "Members" by clicking 3 dots button.
-8. Click "Export List" button, export to excel file.
-9. In the Excel file, there is a field named "Record number". Copy all records number into a text file, and this is your 001 field list file for imported records. Attention “Record number” column in Excel file contains the content of first 035 field from imported records. 
+7. Find the set you created and select “Members” by clicking 3 dots button.
+8. Click “Export List” button, export to excel file.
+9. In the Excel file, there is a field named “Record number”. Copy all records number into a text file, and this is your 035 field list file for imported records. Attention “Record number” column in Excel file contains the content of first 035 field from imported records.
 
-The demo is located in http://librarysysworld.com:8080/marc_records_delete_java, and you could use your 001 field list file and Marc file(.mrk) to make a test.
+The demo is located in
+
+http://librarysysworld.com:8080/marc_records_delete_java
+
+, and you could use your 035 field list file and Marc file(.mrk) to make a test.
+
+The source code and war file is located in https://github.com/andytang2008/marc_records_delete
 
 You could deploy war file to your Tomcat. The environment I use is windows 7. There are 3 jar file from Apache commons needed.
 1.commons-fileupload-1.3.jar
